<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">辽工大教务在线</string>
    <string name="motto">诚朴求是，博学笃行</string>

    <string name="title">标题</string>
    <string name="forward">前进</string>
    <string name="backward">返回</string>
    <string name="submit">提交</string>
    <string name="refresh">刷新</string>

    <string name="exit">退出</string>

    <string name="test_title">测试标题</string>
    <string name="test_text">测试文本</string>
    <string name="test_icon">测试图标</string>

    <string name="menu">菜单</string>
    <string name="action_browser">浏览器访问教务在线</string>
    <string name="action_about">关于</string>
    <string name="action_update">更新检查</string>
    <string name="action_feddback">意见反馈</string>
    <string name="action_share">分享给好友</string>
    <string name="action_market">为应用评分</string>
    <string name="action_more_app">更多应用</string>
    <string name="action_logout">切换/注销账户</string>
    <string name="action_settings">设置</string>
    <string name="action_help">帮助</string>
    <string name="action_exit">退出</string>

    <string name="your_suggestion_title">您的意见与建议：</string>
    <string name="your_suggestion_hint">请输入您要反馈的问题，我们将以此为动力不断改进</string>
    <string name="your_contact_title">您的联系方式：</string>
    <string name="your_contact_hint">可选填写，以便解决问题后给您回复</string>

    <string name="send_crash_log">发送错误日志</string>

    <string name="user_login">用户登录</string>
    <string name="about_app">关于应用</string>
    <string name="advice">意见反馈</string>
    <string name="app_crash">程序崩溃</string>
    <string name="student_info">学籍信息</string>
    <string name="curriculum">学期课表</string>
    <string name="exam_plan">考试安排</string>
    <string name="grades_query">成绩查询</string>
    <string name="one_key">一键评课</string>
    <string name="unpass_query">挂科查询</string>
    <string name="skill_test">等级考试</string>
    <string name="senate_notice">教务公告</string>
    <string name="remember_motto">牢记校训</string>

    <string name="eva_info">评课信息</string>

    <string name="user_id_input_title">学号：</string>
    <string name="pwd_input_title">密码：</string>
    <string name="user_id_input_hint">请输入学号</string>
    <string name="pwd_input_hint">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>

    <string name="version_name">当前版本</string>
    <string name="version_name_content">Android 0.0.0.0</string>
    <string name="development_team">开发团队</string>
    <string name="development_team_content">葫芦岛华慧科技</string>
    <string name="author_email">开发者邮件</string>
    <string name="author_email_content">takwolf@foxmail.com</string>
    <string name="official_homepage">官方主页</string>
    <string name="official_homepage_content">http://app.pupboss.com/</string>

    <string name="male_voice">男声朗读</string>
    <string name="female_voice">女生朗读</string>

    <string name="name">姓名</string>
    <string name="name_content_test">李四</string>
    <string name="date_of_start">开始日期</string>
    <string name="date_of_end">结束日期</string>
    <string name="school_name">学校名称</string>
    <string name="witness">证明人</string>
    <string name="relationship">与本人关系</string>
    <string name="political_affiliation">政治面貌</string>
    <string name="job">职业</string>
    <string name="post">职位</string>
    <string name="work_location">工作地点</string>
    <string name="tel">联系电话</string>

    <string name="course">课程</string>
    <string name="course_name">课程名</string>
    <string name="course_name_content">高等数学</string>
    <string name="course_num">课程号</string>
    <string name="course_num_content">H06849214A</string>
    <string name="course_index">课序号</string>
    <string name="course_index_content">0</string>
    <string name="overall_score">总评</string>
    <string name="overall_score_content">96</string>
    <string name="credit">学分</string>
    <string name="credit_content">6.5</string>
    <string name="credit_point">学分绩点</string>
    <string name="credit_point_content">0.0</string>
    <string name="test_mode">考核方式</string>
    <string name="test_mode_content">考试</string>
    <string name="select_type">选课类型</string>
    <string name="select_type_content">必修</string>
    <string name="exam_type">考试类型</string>
    <string name="exam_type_content">闭卷</string>
    <string name="semester">学期</string>
    <string name="semester_content">2014春</string>
    <string name="remarks">备注</string>
    <string name="remarks_content">正常</string>
    <string name="time">时间</string>
    <string name="location">地点</string>    
    <string name="query">查询</string>
    <string name="nothing">暂无信息</string>
    <string name="skill_test_name">科目</string>
    <string name="grades">成绩</string>
    <string name="merge_the_same">合并相同</string>
    <string name="state">状态</string>
    <string name="teacher">教师</string>

    <string name="course_sample">概率论与数理统计</string>
    <string name="date_sample">2015&#8211;03&#8211;07&#160;09:00&#8211;11:00</string>
    <string name="location_sample">静远118</string>
    <string name="_100">100</string>
    <string name="have_left">还剩</string>
    <string name="day">天</string>

    <string name="have_unfold_less_same_course">已合并相同科目</string>
    
</resources>
