<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main_browser"
        android:title="@string/action_browser"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main_about"
        android:title="@string/action_about"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main_update"
        android:title="@string/action_update"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main_feedback"
        android:title="@string/action_feddback"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main_market"
        android:title="@string/action_market"
        android:orderInCategory="5"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main_logout"
        android:title="@string/action_logout"
        android:orderInCategory="6"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main_exit"
        android:title="@string/action_exit"
        android:orderInCategory="7"
        app:showAsAction="never" />

</menu>
