<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="@dimen/sliding_menu_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFAAAAAA">

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_browser"
            android:text="@string/action_browser"
            android:onClick="onSlidingMenuItemClick" />

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_about"
            android:text="@string/action_about"
            android:onClick="onSlidingMenuItemClick" />

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_update"
            android:text="@string/action_update"
            android:onClick="onSlidingMenuItemClick" />

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_feedback"
            android:text="@string/action_feddback"
            android:onClick="onSlidingMenuItemClick" />

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_market"
            android:text="@string/action_market"
            android:onClick="onSlidingMenuItemClick" />

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_logout"
            android:text="@string/action_logout"
            android:onClick="onSlidingMenuItemClick" />

        <TextView style="@style/BlueFlor.SlidingMenu.Button"
            android:id="@+id/action_main_exit"
            android:text="@string/action_exit"
            android:onClick="onSlidingMenuItemClick" />

    </LinearLayout>

</ScrollView>
