<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/unpass_course_item_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name_content"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/unpass_course_item_tv_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_class_grey600_18dp"
        android:drawableLeft="@drawable/ic_class_grey600_18dp"
        android:drawablePadding="16dp"
        android:text="@string/course_num_content"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/unpass_course_item_tv_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/credit_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_type"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/unpass_course_item_tv_select_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/select_type_content"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
