<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFFFF">

    <include layout="@layout/activity_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_edt_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id_input_hint"
            android:inputType="number"
            android:maxLength="10"
            app:floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/pwd_input_hint"
            android:inputType="textPassword"
            app:floatingLabel="highlight" />

        <CheckBox
            android:id="@+id/login_cb_auto_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/auto_login"
            android:checked="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/button_text_color"
            android:background="@drawable/button_image"
            android:onClick="onBtnLogin" />

    </LinearLayout>

</LinearLayout>
